refactor: improve code structure and readability across various components
- Updated README to reflect changes in database setup instructions.
- Refactored AdminEmergencyResetConfig and AdminInitializationConfig to use more efficient methods for retrieving users.
- Enhanced SecurityConfig by switching to List.of for allowed headers.
- Cleaned up imports and improved message formatting in Telegram command handlers.
- Streamlined entity classes by removing unnecessary annotations and simplifying field definitions.
- Improved error handling and message formatting in notification and state management classes.
- Consolidated message building logic for better maintainability and clarity.